scecilia/style.css
@font-face {
     font-family: NinoFont;
     src: url('font/open-sans.light.ttf');
     font-weight: 200;
}
@font-face {
     font-family: NinoFont;
     src: url('font/open-sans.regular.ttf');
     font-weight: normal;
}
@font-face {
     font-family: NinoFont;
     src: url('font/open-sans.bold.ttf');
     font-weight: bold;
}
@font-face {
     font-family: Tempo;
     src: url('font/tempo.ttf');
     font-weight: normal;
}
#wallpaper {
    -webkit-transform: scale(1.15) translateZ(0);
    -moz-transform: scale(1.15) translateZ(0);
    -ms-transform: scale(1.15) translateZ(0);
    -o-transform: scale(1.15) translateZ(0);
    transform: scale(1.15) translateZ(0);
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000;
    -moz-perspective: 1000;
    -ms-perspective: 1000;
    perspective: 1000;
    background: url('wallpaper.jpg') no-repeat center;
    background-size: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
}
#background {
    display: none
}
html {
    background: url(wallpaper.jpg) no-repeat center;
    background-size: cover;
    background-color: rgba(100, 0, 0, 1);
}
body {
    margin: 0;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    cursor: default!important;
    font-family: NinoFont, Helvetica, sans-serif;
    overflow: hidden;
    /*position: fixed;
    -webkit-transform: translateZ(0);
    -moz-transform: translateZ(0);
    -ms-transform: translateZ(0);
    -o-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000;
    -moz-perspective: 1000;
    -ms-perspective: 1000;
    perspective: 1000;*/
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    -webkit-overflow-scrolling: touch;
}
.iPad {
    height: 95vh!important;
}
.miniPad {
    min-height: 95vh!important;
}
#container {
    z-index: 4;
    color: white;
    min-width: 100vw;
    min-height: 100vh;
    opacity: 0.9
}
#closemenu {
    height: 100vh;
    width: 100vw;
    z-index: 5;
    display: none;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.3);
}
#home {
    height: 100vh;
    width: 100vw;
}
.center-body {
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
}
.big-title {
    font-size: 5em;
    line-height: 0.9em;
    font-family: Tempo, 'Times New Roman', Times, serif;
}
.margin-bot {
    margin-bottom: 0.2em
}
.cb-left {
    width: 20em;
    margin: 2.5%;
}
.cb-right {
    width: 25em;
    margin: 2.5%;
}
.video-prev {
    height: 3em;
    width: 4em;
    border: 1px solid white;
    border-radius: 1px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 1em
}
.play-element {
    display: flex;
    align-items: center;
    height: 3em;
    margin: 4% 0;
    padding: 0.5em;
    border: 3px solid transparent;
    background-color: transparent;
}
.play-element:hover {
    border: 3px solid rgba(180, 0, 0, 0.9);
    cursor: pointer;
    border-radius: 3px;
    background-color: rgba(180, 0, 0, 0.3);
}
.folder-prev {
    height: 3em;
    border-radius: 1px;
    opacity: 0.9;
    margin-right: 1em
}
.video-prev img {
    width: 1.5em;
    height: 1.5em;
}
.el-title {
    font-size: 1.5em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.cb-right .el-title {
    overflow: visible;
    overflow: initial;
    white-space: normal;
    white-space: initial;
    text-overflow: auto;
    text-overflow: initial;
}
a {
    color: white;
    text-decoration: none
}
#logo:hover {
    opacity: 0.5
}
#share-container:hover {
    opacity: 0.5;
    cursor: pointer;
}
footer {
    position: absolute;
    bottom: 5em;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
}
#footer-container {
    width: calc(45em + 5%);
    display: flex;
    justify-content: space-between;
}
#share-container {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
}
#share-menu {
    position: absolute;
    bottom: 0;
    margin-bottom: 3em;
    margin-left: -0.35em;
    width: 11em;
    background: rgba(255, 255, 255, 0.95);
    box-shadow: 0px 0px 10px rgb(0, 0, 0);
    border-radius: 2px;
    border: 3px solid white;
    z-index: 5;
    display: none;
}
.sm-ie {
    z-index: 5!important;
    position: fixed!important;
    margin: auto!important;
    top: 0px!important;
    bottom: 0px!important;
    left: 0px!important;
    right: 0px!important;
    max-height: 11.99em;
    font-size: 1.2em!important;
}
.sm-choice {
    padding: 0.4em 0.8em;
    display: flex;
    align-items: center;
    color: black;
    border-radius: 2px;
}
.sm-choice:hover {
    background-color: rgba(180, 0, 0, 0.3);
}
.sm-choice img {
    margin-right: 1em;
    height: 1.6em;
    width: 1.6em;
    opacity: 0.85;
}
.sc-selected {
    opacity: 0.5
}
#s-text {
    margin-left: 0.3em;
    font-size: 2em;
    font-weight: 100;
}
header {
    position: absolute;
    top: 5em;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    z-index: 4;
}
.header-container {
    width: calc(45em + 5%);
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.h-button {
    height: 1.7em;
    width: 1.7em;
    background:  no-repeat center;
    background-size: cover;
}
#h-volume1 {
    background-image: url("volume-up.svg");
}
#h-volume2 {
    background-image: url("volume-up.svg");
}
#h-reload {
    background-image: url("reload.svg");
}
#h-back {
    background-image: url("back.svg");
}
#h-backVideo {
    background-image: url("back.svg");
}
/* ... */

